Table "people" {
  "id" SERIAL [increment]
  "forename" VARCHAR(255) [not null]
  "surname" VARCHAR(255) [not null]
  "second_surname" VARCHAR(255)
  "email" VARCHAR(255)
  "phone_code" VARCHAR(55)
  "phone_number" VARCHAR(255)
  "birth" DATE
  "dni" VARCHAR(55) [unique]

Indexes {
  id [pk]
}
}

Table "users" {
  "id" SERIAL [increment]
  "person_dni" VARCHAR(255)
  "username" VARCHAR(255)
  "hash" VARCHAR(255)
  "is_validated" BOOLEAN [default: FALSE]
  "is_system_admin" BOOLEAN [default: FALSE]
  "portrait_url" VARCHAR(255)
  "starting_date" DATE
  "ending_date" DATE

Indexes {
  id [pk]
}
}

Table "buildings" {
  "id" SERIAL [increment]
  "address_type" VARCHAR(255)
  "street_address" VARCHAR(255)
  "number" VARCHAR(255)
  "district" VARCHAR(255)
  "postal_code" VARCHAR(255)
  "locality" VARCHAR(255)
  "province" VARCHAR(255)
  "country" VARCHAR(255)
  "admin_dni" VARCHAR(255)
  "president_dni" VARCHAR(255)
  "build_year" INTEGER
  "floors" INTEGER
  "elevators" INTEGER
  "parking_slots" INTEGER
  "image_url" VARCHAR(255)

Indexes {
  id [pk]
}
}

Table "properties" {
  "id" SERIAL [increment]
  "building_id" INTEGER
  "floor" VARCHAR(55)
  "door" VARCHAR(55)

Indexes {
  id [pk]
}
}

Table "neighbors_to_properties" {
  "id" SERIAL [increment]
  "property_id" INTEGER
  "neighbor_dni" VARCHAR(55)
  "starting_date" DATE [not null]
  "ending_date" DATE
Indexes {
  (id, property_id, neighbor_dni) [pk]
}
}

Table "owners_to_properties" {
  "property_id" INTEGER
  "owner_dni" VARCHAR(55)

Indexes {
  (property_id, owner_dni) [pk]
}
}

Table "providers" {
  "id" SERIAL [increment]
  "title" VARCHAR(255) [not null]
  "description" TEXT
  "category" VARCHAR(255)
  "phone_code" VARCHAR(55) [not null]
  "phone_number" VARCHAR(255) [not null]
  "email" VARCHAR(255) [not null]

Indexes {
  id [pk]
}
}

Table "incidences" {
  "id" SERIAL [increment]
  "title" TEXT [not null]
  "description" TEXT
  "image_url" TEXT
  "user_id" INTEGER
  "building_id" INTEGER
  "provider_id" INTEGER
  "date" DATE
  "time" TIME
  "status" VARCHAR(55)

Indexes {
  id [pk]
}
}

Table "announces" {
  "id" SERIAL [increment]
  "title" VARCHAR(255)
  "description" TEXT
  "building_id" INTEGER
  "date" DATE
  "time" TIME

Indexes {
  id [pk]
}
}

Table "bank_accounts" {
  "id" SERIAL [increment]
  "iban" VARCHAR(255)
  "holder" VARCHAR(255)
  "bank" VARCHAR(255)
  "currency" VARCHAR(55)
  "description" TEXT

Indexes {
  id [pk]
}
}

Table "banking_transactions" {
  "id" SERIAL [increment]
  "account_id" INTEGER
  "property_id" INTEGER
  "description" TEXT
  "category" VARCHAR(255)
  "date" DATE
  "time" TIME
  "amount" DECIMAL(10,2)
  "building_id" INTEGER

Indexes {
  id [pk]
}
}

Table "community_fees" {
  "id" SERIAL [increment]
  "property_id" INTEGER
  "description" TEXT
  "building_id" INTEGER
  "property_due" DECIMAL(10, 2)
  "due_date" DATE

  Indexes {
    id [pk]
  }
}

Ref "fk_person_dni":"people"."dni" < "users"."person_dni"
Ref "fk_admin_dni":"people"."dni" < "buildings"."admin_dni"
Ref "fk_president_dni":"people"."dni" < "buildings"."president_dni"
Ref "fk_building_id":"buildings"."id" < "properties"."building_id"
Ref "fk_property_id":"properties"."id" < "neighbors_to_properties"."property_id"
Ref "fk_neighbor_dni":"people"."dni" < "neighbors_to_properties"."neighbor_dni"
Ref "fk_property_id":"properties"."id" < "owners_to_properties"."property_id"
Ref "fk_owner_dni":"people"."dni" < "owners_to_properties"."owner_dni"
Ref "fk_user_id":"users"."id" < "incidences"."user_id"
Ref "fk_building_id":"buildings"."id" < "incidences"."building_id"
Ref "fk_provider_id":"providers"."id" < "incidences"."provider_id"
Ref "fk_building_id":"buildings"."id" < "announces"."building_id"
Ref "fk_account_id":"bank_accounts"."id" < "banking_transactions"."account_id"
Ref "fk_property_id":"properties"."id" < "banking_transactions"."property_id"
Ref "fk_building_id":"banking_transactions"."building_id" > "buildings"."id"
Ref "fk_property_id": "community_fees"."property_id" > "properties"."id"
Ref "fk_building_id": "community_fees"."building_id" > "buildings"."id"
